# Atomic_Habits

./: README.md  docker-compose.yml  nginx.conf  pyproject.toml
.github/workflows/: ci.yml
config/: settings.py  urls.py
habits/: admin.py  models.py  paginators.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_remove_habit_sign_pleasant_habit_and_more.py  0003_alter_habit_good_habit_alter_pleasanthabit_time.py  0004_alter_habit_periodicity_alter_habit_time.py  0005_alter_habit_periodicity.py  0006_alter_habit_sign_publicity.py  0007_alter_habit_time.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_tg_chat_id_alter_user_phone_number.py
